my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ERVAL/ERVAL.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ERVAL.dml:9:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ERVAL.dml:11:12: error ERVAL: operand of 'sizeof' is not an lvalue
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ERVAL.dml:13:19: error ERVAL: operand of 'typeof' is not an lvalue
